@@ -1,3 +1,6 @@
+- localedrake
+  o drop support for iiimf
+
 Version 10.4.190 - 5 September 2007, by Thierry Vignaud
 
 - display a warning when capslock is enabled and entering a password (#33028)
